# Ker

./: .gitignore  README.md  main.py  pyproject.toml
ker/: __init__.py  agent.py  app.py  config.py
ker/llm/: __init__.py  base.py  deepseek_client.py  types.py
ker/screen/: __init__.py  context_capture.py
ker/ui/: __init__.py  chat_window.py  console_chat.py  floating_icon.py
ker/voice/: __init__.py  voice_io.py
tests/: test_agent.py  test_config.py  test_voice.py
