[project]
name = "ker"
version = "0.1.0"
description = "Ker is a non-autonomous AI learning companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pyttsx3>=2.90",
	"SpeechRecognition>=3.10.0",
]

[project.optional-dependencies]
test = [
	"pytest>=8.2.0",
]
voice = [
	"PyAudio>=0.2.14",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
